--- a/countdown/PenguinOneThemeController.xib
+++ b/countdown/PenguinOneThemeController.xib
@@ -43,7 +43,7 @@
 							<object class="IBUIImageView" id="411161575">
 								<reference key="NSNextResponder" ref="70517587"/>
 								<int key="NSvFlags">1316</int>
-								<string key="NSFrameSize">{320, 416}</string>
+								<string key="NSFrameSize">{320, 460}</string>
 								<reference key="NSSuperview" ref="70517587"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="27322876"/>
@@ -52,14 +52,14 @@
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<object class="NSCustomResource" key="IBUIImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">default_bg.jpg</string>
+									<string key="NSResourceName">default_bg_com.jpg</string>
 								</object>
 							</object>
 							<object class="IBUILabel" id="27322876">
 								<reference key="NSNextResponder" ref="70517587"/>
 								<int key="NSvFlags">1316</int>
 								<object class="NSPSMatrix" key="NSFrameMatrix"/>
-								<string key="NSFrame">{{133, 61}, {128, 81}}</string>
+								<string key="NSFrame">{{144, 107}, {128, 81}}</string>
 								<reference key="NSSuperview" ref="70517587"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="664225919"/>
@@ -68,7 +68,7 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">901</string>
+								<string key="IBUIText">000</string>
 								<object class="NSColor" key="IBUITextColor">
 									<int key="NSColorSpace">2</int>
 									<bytes key="NSRGB">MC4wMzkyMTU2ODc2NiAwLjE0NTA5ODA0NTUgMC4yNjY2NjY2ODA2AA</bytes>
@@ -101,7 +101,7 @@
 								<reference key="NSNextResponder" ref="70517587"/>
 								<int key="NSvFlags">1316</int>
 								<object class="NSPSMatrix" key="NSFrameMatrix"/>
-								<string key="NSFrame">{{18, 170}, {55, 59}}</string>
+								<string key="NSFrame">{{18, 215}, {55, 59}}</string>
 								<reference key="NSSuperview" ref="70517587"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="872044516"/>
@@ -140,7 +140,7 @@
 								<reference key="NSNextResponder" ref="70517587"/>
 								<int key="NSvFlags">1316</int>
 								<object class="NSPSMatrix" key="NSFrameMatrix"/>
-								<string key="NSFrame">{{114, 214}, {52, 47}}</string>
+								<string key="NSFrame">{{114, 259}, {52, 47}}</string>
 								<reference key="NSSuperview" ref="70517587"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="551664516"/>
@@ -176,7 +176,7 @@
 								<reference key="NSNextResponder" ref="70517587"/>
 								<int key="NSvFlags">1316</int>
 								<object class="NSPSMatrix" key="NSFrameMatrix"/>
-								<string key="NSFrame">{{169, 285}, {44, 34}}</string>
+								<string key="NSFrame">{{169, 330}, {44, 34}}</string>
 								<reference key="NSSuperview" ref="70517587"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="115302026"/>
@@ -211,7 +211,7 @@
 							<object class="IBUILabel" id="115302026">
 								<reference key="NSNextResponder" ref="70517587"/>
 								<int key="NSvFlags">1316</int>
-								<string key="NSFrame">{{172, 374}, {149, 21}}</string>
+								<string key="NSFrame">{{172, 418}, {149, 21}}</string>
 								<reference key="NSSuperview" ref="70517587"/>
 								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -240,7 +240,7 @@
 							<object class="IBUIImageView" id="421592524">
 								<reference key="NSNextResponder" ref="70517587"/>
 								<int key="NSvFlags">1316</int>
-								<string key="NSFrame">{{-27, 254}, {176, 191}}</string>
+								<string key="NSFrame">{{-27, 299}, {176, 191}}</string>
 								<reference key="NSSuperview" ref="70517587"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="411161575"/>
@@ -254,7 +254,7 @@
 							</object>
 						</array>
 						<object class="NSPSMatrix" key="NSFrameMatrix"/>
-						<string key="NSFrameSize">{320, 416}</string>
+						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="421592524"/>
@@ -317,7 +317,7 @@ AAgACAAIAAEAAQABAAE</bytes>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrame">{{0, 64}, {320, 416}}</string>
+				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="70517587"/>
@@ -330,7 +330,7 @@ AAgACAAIAAEAAQABAAE</bytes>
 				</object>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 				<object class="IBUISimulatedNavigationBarMetrics" key="IBUISimulatedTopBarMetrics">
-					<int key="IBUIBarStyle">1</int>
+					<int key="IBUIBarStyle">2</int>
 					<bool key="IBUIPrompted">NO</bool>
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -428,11 +428,11 @@ AAgACAAIAAEAAQABAAE</bytes>
 						<array class="NSMutableArray" key="children">
 							<reference ref="411161575"/>
 							<reference ref="115302026"/>
-							<reference ref="27322876"/>
 							<reference ref="664225919"/>
 							<reference ref="551664516"/>
 							<reference ref="872044516"/>
 							<reference ref="421592524"/>
+							<reference ref="27322876"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
 					</object>
@@ -567,7 +567,7 @@ AAgACAAIAAEAAQABAAE</bytes>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="default_bg.jpg">{640, 832}</string>
+			<string key="default_bg_com.jpg">{640, 920}</string>
 			<string key="default_theme_mascot.png">{337, 370}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">1181</string>
